--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,8 @@ section {
     border-radius: 9px;
     margin-right: 17px;
     font-family: 'Roboto', sans-serif;
+    
+    
 }
 
 .wrapper .card>* {
@@ -85,7 +87,15 @@ section {
     margin-right: 14px;
 }
 
-.card img {
+.show {
+    box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25), inset 0px 0px 0px 5px #32B72F !important;
+}
+
+.show div img {
+    opacity: 1 !important;
+}
+
+.card img:first-child {
     margin-top: 18px;
 }
 
@@ -102,6 +112,7 @@ section {
     font-weight: 300;
     font-size: 15px;
     line-height: 17.5px;
+    margin-bottom: 4px;
 }
 
 .card p {
@@ -110,6 +121,16 @@ section {
     font-size: 16px;
     line-height: 19px;
     margin-top: 10px;
+}
+
+.card div {
+    display: flex;
+    justify-content: space-between;
+}
+
+.card div img {
+    margin-top: 10px;
+    opacity: 0;
 }
 
 .wrapper + .wrapper {
@@ -143,4 +164,8 @@ button p {
     line-height: 23.5px;
     text-align: center;
     color: #FFFFFF;
+}
+
+.on {
+    background: #32B72F !important;
 }
