--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,9 @@ section {
 
 .card img:first-child {
     margin-top: 18px;
+    width: 144px;
+    height: 87px;
+    border-radius: 4px;
 }
 
 .card h3 {
